// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders a button when only onclick is provided 1`] = `
<button
  className="fwwBvm"
  href={null}
  onClick={[Function]}
  rel="_self"
  size="hecto"
  target=""
>
  I am a link
</button>
`;

exports[`Link renders a default link 1`] = `
<a
  className="efSPmK"
  href="http://localhost/"
  onClick={null}
  rel="_self"
  size="hecto"
  target=""
>
  I am a link
</a>
`;

exports[`Link renders a span when no href or onClick provided 1`] = `
<span
  className="xxebo"
  href={null}
  onClick={null}
  rel="_self"
  size="hecto"
  target=""
>
  I am a link
</span>
`;
